Fixed pagination button overlap
Fixed the CSS bug that was causing the paignation active button to
overlap with the footer.

--- a/plugins/lasso/petitions/assets/css/style.css
+++ b/plugins/lasso/petitions/assets/css/style.css
@@ -3,6 +3,12 @@
     border-color: #d6e9c6;
     color: #000012;
 }
+.pagination > .active-page > a, .pagination > .active-page > span, .pagination > .active-page > a:hover, .pagination > .active-page > span:hover, .pagination > .active-page > a:focus, .pagination > .active-page > span:focus {
+    color: #ffffff;
+    background-color: #428bca;
+    border-color: #428bca;
+    cursor: default;
+}
 .form{
     float: left;
     margin: 4px;
